--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/better-sqlite3": "^7.6.11",
+    "@types/nprogress": "^0.2.3",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.22.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
@@ -37,6 +39,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
@@ -45,6 +49,8 @@
   },
   "dependencies": {
     "better-sqlite3": "^11.1.2",
-    "drizzle-orm": "^0.33.0"
+    "drizzle-orm": "^0.33.0",
+    "nprogress": "^0.2.0",
+    "sass": "^1.83.4"
   }
 }
