--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@types/better-sqlite3": "^7.6.11",
     "@types/nprogress": "^0.2.3",
     "autoprefixer": "^10.4.20",
+    "bits-ui": "^1.0.0-next.78",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.22.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "lucide-svelte": "^0.473.0",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.5",
