--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,12 @@
 	"singleQuote": false,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+	"plugins": [
+		"prettier-plugin-svelte",
+		"prettier-plugin-tailwindcss",
+		"@ianvs/prettier-plugin-sort-imports"
+	],
+	"importOrder": ["^@/(.*)$", "^~/(.*)$", "^[./]"],
 	"overrides": [
 		{
 			"files": "*.svelte",
