--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@cloudflare/workers-types": "^4.20250109.0",
 		"@eslint/compat": "^1.2.3",
 		"@eslint/js": "^9.17.0",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "^5.0.1",
 		"@sveltejs/kit": "^2.0.0",
@@ -33,7 +34,7 @@
 		"drizzle-kit": "^0.22.0",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
+		"eslint-plugin-svelte": "^2.46.1",
 		"formsnap": "^2.0.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.473.0",
